[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "hyperactive-integrations"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["visualization", "data-science"]
authors = [
  {name = "Simon Blanke", email = "simon.blanke@yahoo.com" }
]
maintainers = [
  {name = "Simon Blanke", email = "simon.blanke@yahoo.com" }
]
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
]

dependencies = [
  "hyeractive >=4.0.0, <5.0.0"
  "scikit-learn >=0.21, !=0.23.*",
]

[project.optional-dependencies]
build = [
  "setuptools",
  "build",
  "wheel",
]

[project.urls]
"Homepage" = "https://github.com/SimonBlanke/hyperactive-integrations"
"Bug Reports" = "https://github.com/SimonBlanke/hyperactive-integrations/issues"
"Source" = "https://github.com/SimonBlanke/hyperactive-integrations/"
